# fuzz_generator

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_config.yaml
docs/: AGENT_OPTIMIZATION.md  DEVELOPMENT_PLAN.md  TECHNICAL_DESIGN.md  USER_GUIDE.md  config.example.yaml
docs/prompts/: code_analyzer.example.yaml  model_generator.example.yaml
examples/basic_analysis/: README.md  knowledge.md  tasks.yaml
examples/basic_analysis/sample_code/: handler.c
examples/batch_analysis/: README.md  tasks.yaml
examples/batch_analysis/rtsp_server/: handler.c  parser.c  session.c
examples/complex_analysis/network_server/: knowledge.md  packet_handler.c  protocol.c  protocol.h  tasks.yaml
fuzz_generator/: __init__.py  __main__.py  exceptions.py
fuzz_generator/agents/: __init__.py  autogen_agents.py  base.py  code_analyzer.py  context_builder.py  custom_model_client.py  llm_client.py  model_generator.py  orchestrator.py  simple_workflow.py
fuzz_generator/batch/: __init__.py  executor.py  parser.py  state.py
fuzz_generator/cli/: __init__.py  commands.py  runner.py  validators.py
fuzz_generator/config/: __init__.py  loader.py  settings.py
fuzz_generator/config/defaults/: config.yaml
fuzz_generator/config/defaults/prompts/: analysis_agent.yaml  code_analyzer.yaml  context_builder.yaml  model_generator.yaml  orchestrator.yaml
fuzz_generator/generators/: __init__.py  validator.py  xml_generator.py
fuzz_generator/generators/templates/: datamodel.xml.j2
fuzz_generator/models/: __init__.py  analysis_result.py  function_info.py  task.py  xml_models.py
fuzz_generator/storage/: __init__.py  base.py  cache.py  json_storage.py
fuzz_generator/tools/: __init__.py  analysis_tools.py  mcp_client.py  project_tools.py  query_tools.py
fuzz_generator/utils/: __init__.py  logger.py  validators.py  xml_utils.py
output/: test_model.xml
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_batch_workflow.py  test_cli_e2e.py
tests/performance/: __init__.py  test_benchmarks.py
tests/test_autogen/: __init__.py  test_custom_model_client.py  test_two_phase_workflow.py
tests/test_phase1/: __init__.py  test_cli.py  test_config.py  test_installation.py  test_logger.py  test_models.py  test_storage.py
tests/test_phase2/: __init__.py  test_mcp_client.py  test_tools.py
tests/test_phase3/: __init__.py  test_base_agent.py  test_code_analyzer.py  test_context_builder.py  test_model_generator.py  test_orchestrator.py
tests/test_phase4/: __init__.py  test_executor.py  test_parser.py  test_state.py
tests/test_phase5/: __init__.py  test_validator.py  test_xml_generator.py  test_xml_models.py
